--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^7.0.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.0-beta.10",
     "react-reveal": "^1.2.2",
